invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_62.src
.IPPcode24
OR LF@d int@49 string@henlo LF@a